[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cyberspace/UI/base_test.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/buttonDefault.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 190, 49 )
margin_left = 7.15179
margin_right = 6.47067
margin_top = 7.15179
margin_bottom = 9.19516
modulate_color = Color( 0.701961, 0, 0, 1 )

[node name="RunUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
mouse_filter = 2
alignment = 1

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 458.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[right]Time Remaining:[/right]"
text = "Time Remaining:"

[node name="TimeRemaining" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 462.0
margin_right = 562.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]0.3"
text = "0.3"

[node name="TimeSubtracted" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 566.0
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
bbcode_enabled = true

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 1024.0
margin_bottom = 217.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_right = 1024.0
margin_bottom = 152.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="NoICE" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.415686 )
margin_left = 5.0
margin_top = 65.0
margin_right = 1019.0
margin_bottom = 86.0
text = "No ICE in this room"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 147.0
mouse_filter = 2
size_flags_vertical = 3

[node name="RoomICE" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1014.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 232.0
margin_right = 1024.0
margin_bottom = 385.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer2"]
margin_right = 1024.0
margin_bottom = 153.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="NoObjects" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2/MarginContainer2"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.415686 )
margin_left = 5.0
margin_top = 66.0
margin_right = 1019.0
margin_bottom = 87.0
text = "No objects in this room"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/MarginContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 148.0
mouse_filter = 2
size_flags_vertical = 3

[node name="RoomContents" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/MarginContainer2/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1014.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 1024.0
margin_bottom = 580.0
mouse_filter = 2
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Spoof"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 348.0
margin_right = 676.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Fuzz"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 696.0
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Disable"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 1024.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Analyze"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 348.0
margin_right = 676.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Decrypt"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 696.0
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Download"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 1024.0
margin_bottom = 180.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 502.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Pass Time"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 522.0
margin_right = 1024.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 1 )
text = "Disconnect"

[node name="Freq" type="Timer" parent="."]

[node name="Dur" type="Timer" parent="."]

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_Button2_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
